# cec_exp

./: CMakeLists.txt  main.cpp  porb1_rotation2D.cpp  rotation_matrix.cpp  rotation_matrix_2D.cpp  run.sh
cecs/: CMakeLists.txt  main.c  run.sh
results/: affine_1.txt  affine_3.txt  affine_5.txt  kstest_scale.csv  kstest_subtract.csv  origin_affine.csv  samplingX.txt  scale_2_3.txt  scale_2_4.txt  scale_2_5.txt  src.py
results/contour/rotation/: contour.eps
results/data/: affine_2.txt  affine_4.txt  origin_1.txt  origin_2.txt  origin_3.txt  origin_4.txt  origin_5.txt  scale_2_1.txt  scale_2_2.txt
results/exp_data/rotation/: F1_rotation2D_00.txt  F1_rotation2D_01.txt  F1_rotation2D_02.txt  F1_rotation2D_03.txt  F1_rotation2D_04.txt  F1_rotation2D_05.txt  F1_rotation2D_06.txt  F1_rotation2D_07.txt  F1_rotation2D_08.txt  F1_rotation2D_09.txt  F1_rotation2D_10.txt  F1_rotation2D_11.txt  F1_rotation2D_12.txt  F1_rotation2D_13.txt  F1_rotation2D_14.txt  F1_rotation2D_15.txt  F1_rotation2D_16.txt  F1_rotation2D_17.txt  F1_rotation2D_18.txt  F1_rotation2D_19.txt  F1_rotation2D_20.txt  F1_rotation2D_21.txt  F1_rotation2D_22.txt  F1_rotation2D_23.txt  F1_rotation2D_24.txt  F1_rotation2D_25.txt  F1_rotation2D_26.txt  F1_rotation2D_27.txt  F1_rotation2D_28.txt  F1_rotation2D_29.txt
results/landscape/: F2.txt  F3.txt  F4.txt  F5.txt
results/rotation_matrix/2D/: rotation_matrix_00.txt  rotation_matrix_01.txt  rotation_matrix_02.txt  rotation_matrix_03.txt  (+26 more)
scripts/: contour.py  landscape.py  plot_landscape.py  results2csv.py  sampling.py  similarity.py
